[HTML, CSS] Fix alignment of tables #6331

--- a/assets/scss/wallet.sass
+++ b/assets/scss/wallet.sass
@@ -60,3 +60,7 @@
 
 .first-field
   width: 50%
+  
+  @media (max-width: 550px)
+    width: 140px
+
